@@ -3,15 +3,12 @@
 <body>
 <h2>How to configure Firefox:</h2>
 <ol>
-    <li>Click <a href="https://addons.mozilla.org/en-US/android/addon/network-preferences-add-on/">HERE</a>, and choose to open the URL in Firefox.</li>
-    <li>Click the toggle to install the Network Preference add-on.</li>
-    <li>In the main Firefox menu, click "Tools", then "Add-ons".</li>
-    <li>Click on "Network Preferences Add-on".</li>
-    <li>Change the value of "Configure Proxies" to <code>1</code>.</li>
-    <li>Change the value of "HTTP Proxy" to <code>127.0.0.1</code>.</li>
-    <li>Change the value of "Port" under "HTTP Proxy" to <code>4444</code>.</li>
-    <li>Change the value of "HTTPS Proxy" to <code>127.0.0.1</code>.</li>
-    <li>Change the value of "Port" under "HTTPS Proxy" to <code>4444</code>.</li>
+    <li>Click <a href="about:config?filter=network.proxy">HERE</a>, and choose to open the URL in Firefox.</li>
+    <li>Change the value of "network.proxy.type" to <code>1</code>.</li>
+    <li>Change the value of "network.proxy.http" to <code>127.0.0.1</code>.</li>
+    <li>Change the value of "network.proxy.http_port" to <code>4444</code>.</li>
+    <li>Change the value of "network.proxy.ssl" to <code>127.0.0.1</code>.</li>
+    <li>Change the value of "network.proxy.ssl_port" to <code>4444</code>.</li>
     <li>You can now browse I2P eepsites!</li>
 </ol>
 </body>
