@@ -8,6 +8,7 @@
    * configuring addressbook subscriptions
    * using a configuration wizard
    * saving tunnel settings
+ * Update Firefox browser config instructions for Firefox Quantum
  * Translation updates
 
 0.9.31 / 2017-08-19
